--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='http://linkedin.com/in/haroon-khan-929598248'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/Haroon-1ktk'"
           />
         </div>
       </div>
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/profile-pic.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>Frontend Development</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,16 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>BBA(Finance)<br />M.Sc. Masters Degree</p>
+              <p>BBA(Finance)<br />Advance React and Redux (Udemy)</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              I'm a passionate front-end developer dedicated to crafting exceptional web experiences.
+               With a solid foundation in JavaScript, React.js, HTML, CSS, and Tailwind,
+                I focus on creating visually appealing and highly functional user interfaces.
+                I enjoy solving complex problems and constantly strive to learn new technologies and improve my coding practices.
+                 In my free time,I love exploring the latest trends in web development and contributing to open-source projects.
             </p>
           </div>
         </div>
@@ -214,13 +213,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Haroon-1ktk/TravelList'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://mytravellist-12.netlify.app/'"
               >
                 Live Demo
               </button>
@@ -238,13 +237,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Haroon-1ktk/E-commerce-filtering'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://react-e-commerce-filtering.netlify.app/'"
               >
                 Live Demo
               </button>
@@ -262,13 +261,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/fitness'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://fitnessfreakktk.netlify.app/'"
               >
                 Live Demo
               </button>
@@ -301,7 +300,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/haroon-khan-929598248">LinkedIn</a></p>
         </div>
       </div>
     </section>
