--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                With a solid foundation in JavaScript, React.js, HTML, CSS, and Tailwind,
                 I focus on creating visually appealing and highly functional user interfaces.
                 I enjoy solving complex problems and constantly strive to learn new technologies and improve my coding practices.
-                 In my free time,I love exploring the latest trends in web development and contributing to open-source projects.
+                 In my free time,I love exploring the latest trends in web development.
             </p>
           </div>
         </div>
