--- a/index.html
+++ b/index.html
@@ -254,20 +254,20 @@
               <img
                 src="./assets/project-3.png"
                 alt="Project 3"
-                class="project-img"
+                class="project-imgs"
               />
             </div>
             <h2 class="experience-sub-title project-title">Project Three</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/fitness'"
+                onclick="location.href='https://github.com/Haroon-1ktk/Gemini-Clone'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://fitnessfreakktk.netlify.app/'"
+                onclick="location.href='https://geminiktk.netlify.app/'"
               >
                 Live Demo
               </button>
