--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Haroon-1ktk/Gemini-Clone'"
+                onclick="location.href='https://github.com/Haroon-1ktk/fitness'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://geminiktk.netlify.app/'"
+                onclick="location.href='https://fitnessfreakktk.netlify.app/'"
               >
                 Live Demo
               </button>
